# ast-gen

./: .gitignore  .ocamlformat  LICENSE  README.md  ast_gen.opam  dune-project  graphjs.opam  graphjs2.opam  results.txt  workspace.code-workspace
.github/workflows/: build.yml
config/: dune  jsmodel.json  jsmodel.jsonc  taint.json
dt/: dune  index.js  package.json  script.ml
graphjs-results/code/: normalized.js
graphjs-results/graph/: graph_stats.json  nodes.csv  rels.csv
lib/: aux.ml  dune  graphJS.ml  js_parser.ml  json_translator.ml  normalizer.ml  pp.ml  share.ml
lib/ast/: ast_pp.ml  dune  normalize.ml  pp.ml
lib/ast/structures/: function.ml  functions.ml  grammar.ml
lib/auxiliary/: dune  file_system.ml  functions.ml  graphJS.ml  mode.ml  mode.mli  share.ml  structures.ml
lib/base/: dune  fun.ml  hashtbl.ml  list.ml  option.ml  result.ml
lib/mdg/: analyse.ml  dune  graph.ml  state.ml  store.ml  structures.ml
lib/mdg/analysis/: abstractAnalysis.ml  analysisType.ml  buildExportsObject.ml  collectExternalCalls.ml  generateMDG.ml  sinkAliases.ml
lib/mdg/pp/: pp.ml
lib/mdg/structures/: config.ml  exportedObject.ml  externalReferences.ml  graph'.ml  graph.ml  state.ml  store.ml  structures.ml
lib/normalizer/: dune  normalize.ml  normalizer.ml  structures.ml
lib/parse/: config.ml  dependency_tree.ml  dune  js_parser.ml
lib/pp/: dot.ml  dune  js.ml
lib/queries/: dune  queries.ml  vulnerability.ml
lib/setup/: config.ml  dependencyTree.ml  dependency_tree.ml  dune  file_system.ml  js_parser.ml  mode.ml
lib/std/: dune  functions.ml  result.ml  structures.ml
resources/js/: generate_cg.js  package.json
share/: config.json  dune
src/: dune  graphjs.ml
src/analyzer/: analysis_engine.ml  analyzer.ml  dune
src/analyzer/analysis/: callers.ml  exported.ml  interactability.ml  properties.ml  reachability.ml  sources.ml
src/analyzer/domain/: vulnerability.ml
src/ast/: ast.ml  dune  graphjs_ast.ml  metadata.ml  normalize.ml  parser.ml  pp.ml  printer.ml  region.ml
src/ast/structures/: functions.ml  grammar.ml
src/ast/temp/: normalize.ml  pp.ml
src/base/: config.ml  console.ml  dune  fmt.ml  font.ml  funcs.ml  generator.ml  json.ml  log.ml  time.ml  writer.ml
src/base/stdlib/: fun.ml  hashtbl.ml  json.ml  list.ml  option.ml  result.ml  set.ml  string.ml
src/client/: bulk.ml  cmd_analyze.ml  cmd_dependencies.ml  cmd_mdg.ml  cmd_parse.ml  cmd_query.ml  cmd_validate.ml  docs.ml  dune  enums.ml  exec.ml  files.ml  fs.ml  moduleGraphs.ml  status.ml  summaries.ml  workspace.ml
src/client/commands/: cmd_analyze.ml  cmd_mdg.ml  cmd_normalize.ml  cmd_parse.ml  share.ml
src/client/domain/: query_expected.ml  query_validation.ml
src/client/utils/: bulk.ml  exec.ml  fs.ml  properties.ml  workspace.ml
src/config/: dune  tainted.ml
src/mdg/: analyse.ml  builder.ml  builder_config.ml  dune  function.ml  interceptor.ml  jslib.ml  merger.ml
src/mdg/analyses/: cleaner.ml  exported.ml  httpserver.ml  tainted.ml
src/mdg/analysis/: abstractAnalysis.ml  analysisType.ml  buildExportsObject.ml  cleaner.ml  collectExternalCalls.ml  exported.ml  sinkAliases.ml
src/mdg/domain/: allocator.ml  function.ml  jslib.ml  jsmodel.ml  npm.ml  npmlib.ml  pcontext.ml  registry.ml  state.ml  store.ml  store_layered'.ml  store_layered.ml  store_nomut.ml
src/mdg/export/: export_taint.ml  export_view.ml  svg_exporter.ml
src/mdg/graph/: edge.ml  literal.ml  location.ml  mdg.ml  node.ml  property.ml  reference.ml  taint.ml  tainted.ml
src/mdg/pp/: export.ml
src/mdg/structures/: exportedObject.ml  mdg.ml  state.ml  store.ml  structures.ml
src/parser/: dependency_tree.ml  dune  flow_parser.ml  javascript_parser.ml  normalizer.ml  parser.ml  parser_config.ml
src/queries/: analyzer.ml  dune  query_engine.ml
src/queries/analysis/: interactability.ml  local_flow.ml  reachability.ml
src/queries/domain/: vulnerability.ml
src/query/: builtin_queries.ml  dune  query_engine.ml
src/query/domain/: vulnerability.ml
src/setup/: config.ml  dependencyTree.ml  dune  file_system.ml
src/share/: analysis_mode.ml  dune  mode.ml  properties.ml  share_config.ml  sink_kind.ml  taint_config.ml
src/shared/: dune  mode.ml  shared_config.ml  taint_config.ml  vulnerability.ml
test/: do_while.js  dune  example-fig1.js  example-fig8.js  if.js  results.txt  results_graphjs.txt  results_graphjs2.txt  simple_extension.js
test/cram/array-expressions.t/: run.t
test/cram/arrow-function-expressions.t/: run.t
test/cram/assignment-expressions.t/: run.t
test/cram/await-expressions.t/: run.t
test/cram/binary-expressions.t/: run.t
test/cram/call-expressions.t/: run.t
test/cram/class-declarations.t/: run.t
test/cram/class-expressions.t/: run.t
test/cram/literals.t/: run.t
test/dependency_tree/: dune  test.ml  test_basic.ml  test_multi.ml  test_single.ml
test/dependency_tree/directories/: f2.js
test/dependency_tree/directories/dir/: f3.js
test/dependency_tree/index/invalid/: package.json
test/dependency_tree/index/valid/: package.json
test/dependency_tree/main/: double.js  f2.js  f3.js  triple.js
test/dependency_tree/package/invalid/: package.json
test/dependency_tree/package/valid/: package.json
test/dependency_tree/recursive/: bar.js  baz.js  f1.js  f2.js  f3.js  foo.js
test/dependency_tree/stdlib/: stdlib.js
test/graph_analyzer/: dune  test_interactability.ml
test/normalization/: test262.py
test/paper_examples/: example-fig1.js
test/proto-05_12/: proto_arg.js  proto_arg2.js  simple_proto.js
test/query_analysis/: dune  test.ml  test_reachability.ml
test/this-05_12/: met.js  this.js  this_ret.js
test/vulnerability_queries/: dune
(+273 files in other folders)
