(include_subdirs unqualified)

(library
 (name graphjs_client)
 (modules
  fs
  workspace
  exec
  bulk
  site
  properties
  query_expected
  query_validation
  enums
  docs
  cmd_dependencies
  cmd_parse
  cmd_mdg
  cmd_query
  cmd_validate)
 (libraries
  graphjs_base
  graphjs_parser
  graphjs_ast
  graphjs_mdg
  graphjs_query
  dune-site
  cmdliner
  bos)
 (flags
  (:standard -open Graphjs_base)))

(generate_sites_module
 (module site)
 (sites graphjs))
