(include_subdirs unqualified)

(library
 (name graphjs_mdg)
 (modules
  location
  literal
  property
  taint
  node
  edge
  mdg
  store
  allocator
  pcontext
  jslib
  npmlib
  state
  exported
  tainted
  cleaner
  export_view
  svg_exporter
  builder
  interceptor)
 (libraries graphjs_base graphjs_share graphjs_ast ocamlgraph))
