(include_subdirs unqualified)

(library
 (name graphjs_mdg)
 (modules
  location
  literal
  reference
  property
  taint
  node
  edge
  mdg
  store
  allocator
  pcontext
  jsmodel
  jslib
  npmlib
  state
  exported
  tainted
  cleaner
  export_view
  export_taint
  svg_exporter
  builder
  interceptor)
 (libraries graphjs_base graphjs_parser graphjs_ast ocamlgraph)
 (flags
  (:standard -open Graphjs_base)))
