(library
 (name graphjs_tests_dependency_tree)
 (modules test test_basic test_single test_multi)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (libraries graphjs_base graphjs_shared graphjs_parser))

(alias
 (name runtest)
 (deps
  (package graphjs)
  (source_tree main)
  (source_tree recursive)
  (source_tree package)
  (source_tree index)))
