(library
 (name graphjs_tests_deptree)
 (modules test test_single test_multi)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (libraries graphjs_base graphjs_parser)
 (flags
  (:standard -open Graphjs_base)))

(alias
 (name runtest)
 (deps
  (package graphjs)
  (source_tree main)
  (source_tree directories)
  (source_tree recursive)
  (source_tree package)
  (source_tree index)
  (source_tree stdlib)))
